# yet-another-lang-unicodes-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: cjk_unicodes.rs
